html 많이쓰이는것들

--- a/todo-list/main.html
+++ b/todo-list/main.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        <h1>투두리스트</h1>
-        <h2>투두리스트</h2>
-        <h6>투두리스트</h6>
-        <div>영역</div>
-        <br/><br/>
-        <hr/>
-        <div>영역2</div>
-        <p>긴~ 문장을 쓸 때</p>
-        <p>긴~ <span style="color:crimson">문장</span>을 쓸 때</p>
-        <ul>
-            <li>1</li>
-            <li>2</li>
-        </ul>
-        <input type="text" />
-        <input type="number" />
-        <button>버튼</button>
-        <img src="https://tumblbug-pci.imgix.net/421a1c281f0a0dd55bf6b18d49d264901cdb3027/ee089eb7239a11bb68a8ec93a0cf4afc9add7c49/2a329fe7abaf80b243897018677eb690ab7a13b0/6d8422db-756f-42c6-8d1d-175a89096f27.jpg?ixlib=rb-1.1.0&w=1240&h=930&auto=format%2Ccompress&lossless=true&fit=crop&s=65070e367670db5140f126029d249847"/>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+    <h1>투두리스트</h1>
+    <h2>투두리스트</h2>
+    <h6>투두리스트</h6>
+    <div>영역</div>
+    <br/><br/>
+    <hr/>
+    <div>영역2</div>
+    <p>긴~ <span style="color:fuchsia">문장</span>을 쓸 때</p>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+    </ul>
+    <input type="text" />
+    <input type="number" />
+    <button>클릭</button>
+    <br/>
+    <br/>
+    <img src="https://d2u3dcdbebyaiu.cloudfront.net/uploads/atch_img/545/39f6572200db28307bdda9873289ece9_res.jpeg"/>
+<body>
+    
+</body>
 </html>
