--- a/todo-list/main.html
+++ b/todo-list/main.html
@@ -5,34 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./main.css"/>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container" id="container">
-        <h3 id="title">정말 간단 to do list</h3>
-        <div id="sub-container">
-            <ul class="list-group" id="list-group">
-                <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
-                  오늘의 할일 목록 하나!
-                  <span class="badge badge-primary badge-pill">삭제</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
-                    오늘의 할일 목록 하나!
-                    <span class="badge badge-primary badge-pill">삭제</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
-                    오늘의 할일 목록 하나!
-                    <span class="badge badge-primary badge-pill">삭제</span>
-                  </li>
-            </ul>
-        </div>
-        <div class="input-group mb-3" id="input-group">
-            <input type="text" class="form-control" id="input-area">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-area">Button</button>
+            <h1 id="TODOLIST">TODOLIST</h1>
+            <div class="input-group mb-3" id="input-group">
+                <input type="text" class="form-control" placeholder="할 일 추가하기">
+                <button class="btn btn-outline-secondary" type="button" id="button">+</button>
             </div>
-        </div>
+            <div class="find-btn">
+                <button class="btn btn-outline-secondary" type="button" id="button1">모두 삭제</button>
+            </div>
     </div>
 </body>
 </html>
